welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var vuBiscuit:Boolean 
            ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
	while (vuBiscuit==false) {
        ^